--- a/src/main/webapp/part4/4-2-5.html
+++ b/src/main/webapp/part4/4-2-5.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8"> 
+<meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
 <body>
 	<script type="text/javascript">
 		const todos = ['우유 구매', '업무 메일 확인하기', '필라테스 수업']
 		
-		for(const i in tods) {
+		for(let i = 0; i< todos.length; i++) {
 			console.log(`${i}번째 할 일 : ${todos[i]}`)
 		}
 	</script>
